refactor and add hardcoded db users
